Reorganisation of shaders
Orrery shows orbits in right places
Removal of not used testbitmapsstardiscs

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -118,16 +118,21 @@
     <Compile Include="GL4\Operations\Operations.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersTesselationSinewaveInstanced.cs" />
     <Compile Include="GL4\Shaders\Find\ShaderFindGeoTriangles.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersFragmentTristrip.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersTesselationEvaluateSinewave.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersTesselationControl.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersVertexScaleLookAt.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersVertexModelWorld.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersVertexQuadsMatrix.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersVertexTriangleStrips.cs" />
+    <Compile Include="GL4\Shaders\Fragment\ShadersFragmentTristrip.cs" />
+    <Compile Include="GL4\Shaders\Tesselation\ShadersTesselationEvaluateSinewave.cs" />
+    <Compile Include="GL4\Shaders\Tesselation\ShadersTesselationControl.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexModelColour.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexViewSpace.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexScaleLookAt.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexModel.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexQuadsMatrix.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexTriangleStrips.cs" />
     <Compile Include="GL4\Shaders\PointSprites\ShaderPointSprites.cs" />
     <Compile Include="GL4\Shaders\Stars\ShaderStarCorona.cs" />
     <Compile Include="GL4\Shaders\Stars\ShaderStarSurface.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexScreen.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexWorldTexture.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexWorldColour.cs" />
     <Compile Include="GL4\ShapeFactory\FactoryCylinder.cs" />
     <Compile Include="GL4\BitMaps\GLBitmaps.cs" />
     <Compile Include="GL4\WavefrontObj\GLWavefrontObjRenderCreator.cs" />
@@ -141,7 +146,7 @@
     <Compile Include="GL4\Shaders\Base\ShaderCompute.cs" />
     <Compile Include="GL4\Shaders\Compute\ComputeGaussian.cs" />
     <Compile Include="GL4\Shaders\Compute\ComputeNoise.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersFragmentTextures.cs" />
+    <Compile Include="GL4\Shaders\Fragment\ShadersFragmentTextures.cs" />
     <Compile Include="GL4\Shaders\Volumetric\ShaderVolumetric.cs" />
     <Compile Include="GL4\ShapeFactory\FactoryTape.cs" />
     <Compile Include="GL4\ShapeFactory\FactoryCube.cs" />
@@ -158,9 +163,9 @@
     <Compile Include="GL4\Shaders\Base\ShaderPipeline.cs" />
     <Compile Include="GL4\Shaders\Base\ShaderPipelineShadersBase.cs" />
     <Compile Include="GL4\Shaders\Base\ShaderStandard.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersFragmentColors.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersVertexWorldPositions.cs" />
-    <Compile Include="GL4\Shaders\PipelineShaders\ShadersVertexModelObject.cs" />
+    <Compile Include="GL4\Shaders\Fragment\ShadersFragmentColors.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexWorld.cs" />
+    <Compile Include="GL4\Shaders\Vertex\ShadersVertexModelTexture.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersColorObjects.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersTesselationSinewave.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersTexturedBlendedMultiple.cs" />
