--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Galaxy\GalaxyStars.cs" />
     <Compile Include="Orrery\KeplerOrbitElements.cs" />
     <Compile Include="Orrery\OrbitalBodyInformation.cs" />
+    <Compile Include="Orrery\Orrery.cs" />
     <Compile Include="Orrery\TestOrreryImport.cs">
       <SubType>Form</SubType>
     </Compile>
