Better layout of classes
To mirror EDD layout

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="Galaxy\GalaxyStars.cs" />
     <Compile Include="Orrery\KeplerOrbitElements.cs" />
+    <Compile Include="Orrery\StarNodes.cs" />
     <Compile Include="Orrery\OrbitalBodyInformation.cs" />
     <Compile Include="Orrery\Orrery.cs" />
     <Compile Include="Orrery\TestOrreryImport.cs">
