Squashed commit of the following:
commit c16049f0ee3a3f5f46a78226dca4a872b8abde66
Author: robbyxp1 <robxp@hotmail.com>
Date:   Mon Dec 13 21:24:43 2021 +0000

    Improve performance of displaycontrol under docking

    Clean up combo box interfaces
    Fix Enabled on children
    If docked, controldisplay does a full layout automatically

commit bf68363a7894f7ef3f5179e8e44f9251a4c22ebe
Author: robbyxp1 <robxp@hotmail.com>
Date:   Mon Dec 13 16:39:11 2021 +0000

    More and more fixes

    EnableThemer on each control
    Added fore and back disable scaling to provide better visual control
    Form Tab works now when nothing is selected
    Menu item painting, icon area width improved.
    Form configurable assigns tab position by order added

commit 14d28de464b74a07792c2cc65d4ddc39b32432b7
Author: robbyxp1 <robxp@hotmail.com>
Date:   Mon Dec 13 12:23:47 2021 +0000

    Added PerformFullLayout to displaycontrol

commit fce7eaf3df865b52b997982bfa4040d1d4341172
Author: robbyxp1 <robxp@hotmail.com>
Date:   Mon Dec 13 12:14:58 2021 +0000

    More fixes to new control system

commit 5ad5807a8914744754d76a76015f72e469963ff9
Author: robbyxp1 <robxp@hotmail.com>
Date:   Sun Dec 12 16:56:42 2021 +0000

    Major rework of displaycontrol vs how the invalidation layout works

    This reduces redraws

commit 2abf474a2834d9cc7b84875a1dd1821576b16326
Author: robbyxp1 <robxp@hotmail.com>
Date:   Sat Dec 11 17:39:52 2021 +0000

    If a control is removed/detached, its set to need redraw next time attached

    This makes right click menus work

commit 1996c334321d569982fcd42b7341dcafc9566d9d
Author: robbyxp1 <robxp@hotmail.com>
Date:   Sat Dec 11 15:17:22 2021 +0000

    Fix galaxy menu colours via themer

    fix DTB selected color

commit 6fed843c56abf7ddbd321018e216b5d8d7e6920d
Author: robbyxp1 <robxp@hotmail.com>
Date:   Sat Dec 11 14:51:31 2021 +0000

    Minor changes to move function for displaycontrol

commit 75c51492e84244ad54e90b8ee6c8e7dd1bd06f40
Author: robbyxp1 <ro

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -118,6 +118,7 @@
     <Compile Include="GL4\Operations\Operations.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersTesselationSinewaveInstanced.cs" />
     <Compile Include="GL4\Shaders\Find\ShaderFindGeoTriangles.cs" />
+    <Compile Include="GL4\Shaders\Fragment\ShadersFragmentBindless.cs" />
     <Compile Include="GL4\Shaders\Fragment\ShadersFragmentTristrip.cs" />
     <Compile Include="GL4\Shaders\Tesselation\ShadersTesselationEvaluateSinewave.cs" />
     <Compile Include="GL4\Shaders\Tesselation\ShadersTesselationControl.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="GL4\ShapeFactory\FactoryCylinder.cs" />
     <Compile Include="GL4\BitMaps\GLBitmaps.cs" />
     <Compile Include="GL4\WavefrontObj\GLWavefrontObjRenderCreator.cs" />
+    <Compile Include="GL\GLMatrixArray.cs" />
     <Compile Include="GL\GLMatrixString.cs" />
     <Compile Include="GL\GLMatrix4Statics.cs" />
     <Compile Include="Models\WaveFrontObj\GLWavefrontObj.cs" />
@@ -237,12 +239,6 @@
   <ItemGroup>
     <None Include="GL4\Shaders\Base\PlanShaders.txt" />
     <None Include="Readme.txt" />
-    <None Include="Resources\Up.png" />
-    <None Include="Resources\Right.png" />
-    <None Include="Resources\Left.png" />
-    <None Include="Resources\Calendar111.png" />
-    <None Include="Resources\Calendar11.png" />
-    <None Include="Resources\Calendar1.png" />
     <None Include="Resources\Calendar.png" />
   </ItemGroup>
   <ItemGroup />
