--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BaseUtils\FileHelpers.cs" />
     <Compile Include="BaseUtils\StringObjectExtensionsLists.cs" />
     <Compile Include="BaseUtils\Timers.cs" />
+    <Compile Include="Controller3D\Controller3DBase.cs" />
     <Compile Include="Controller3D\Controller3Dd.cs" />
     <Compile Include="Controller3D\KeyboardState.cs" />
     <Compile Include="Controller3D\PositionCamerad.cs" />
