--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Controls\TestControlsMenu.designer.cs">
       <DependentUpon>TestControlsMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\TestControlsDGV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\TestControlsDGV.designer.cs">
+      <DependentUpon>TestControlsDGV.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrameBuffer\TestRenderBuffer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -358,6 +364,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\TestControlsMenu.resx">
       <DependentUpon>TestControlsMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\TestControlsDGV.resx">
+      <DependentUpon>TestControlsDGV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrameBuffer\TestRenderBuffer.resx">
       <DependentUpon>TestRenderBuffer.cs</DependentUpon>
