--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -70,19 +70,19 @@
     <Compile Include="GL4\Buffers\GLSetOfObjectsWithLabels.cs" />
     <Compile Include="GL4\Buffers\GLVertexBufferIndirect.cs" />
     <Compile Include="GL4\Buffers\GLObjectsWithLabels.cs" />
-    <Compile Include="GL4\Controls\Control_WindowControl.cs" />
-    <Compile Include="GL4\Controls\ControlAnimators.cs" />
-    <Compile Include="GL4\Controls\ControlAnimation.cs" />
-    <Compile Include="GL4\Controls\ControlBaseCheckBox.cs" />
-    <Compile Include="GL4\Controls\ControlCalendar.cs" />
-    <Compile Include="GL4\Controls\ControlMenuItem.cs" />
+    <Compile Include="GL4\Controls\Base\Control_WindowControl.cs" />
+    <Compile Include="GL4\Controls\Animation\ControlAnimators.cs" />
+    <Compile Include="GL4\Controls\Animation\ControlAnimation.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlBaseCheckBox.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlCalendar.cs" />
+    <Compile Include="GL4\Controls\Menus\ControlMenuItem.cs" />
     <Compile Include="GL4\Buffers\GLSetOfMatrixBufferWithGenerations.cs" />
     <Compile Include="GL4\Buffers\GLMatrixBufferWithGenerations.cs" />
-    <Compile Include="GL4\Controls\ControlMenuStrip.cs" />
-    <Compile Include="GL4\Controls\ControlNumberBox.cs" />
-    <Compile Include="GL4\Controls\ControlStructsEnums.cs" />
-    <Compile Include="GL4\Controls\ControlTextBoxAutoComplete.cs" />
-    <Compile Include="GL4\Controls\ControlToolTip.cs" />
+    <Compile Include="GL4\Controls\Menus\ControlMenuStrip.cs" />
+    <Compile Include="GL4\Controls\TextBoxes\ControlNumberBox.cs" />
+    <Compile Include="GL4\Controls\Base\ControlStructsEnums.cs" />
+    <Compile Include="GL4\Controls\TextBoxes\ControlTextBoxAutoComplete.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlToolTip.cs" />
     <Compile Include="GL4\Controls\DGV\DataGridViewTopLeftPanel.cs" />
     <Compile Include="GL4\Controls\DGV\DataGridViewRowHeaderPanel.cs" />
     <Compile Include="GL4\Controls\DGV\DataGridViewColumnHeaderPanel.cs" />
@@ -92,32 +92,32 @@
     <Compile Include="GL4\Controls\DGV\DataGridViewColumn.cs" />
     <Compile Include="GL4\Controls\DGV\DataGridViewCellStyle.cs" />
     <Compile Include="GL4\Controls\DGV\DataGridView.cs" />
-    <Compile Include="GL4\Controls\FormMessageBox.cs" />
-    <Compile Include="GL4\Controls\FormConfigurable.cs" />
-    <Compile Include="GL4\Controls\ControlBaseButton.cs" />
-    <Compile Include="GL4\Controls\ControlComboBox.cs" />
-    <Compile Include="GL4\Controls\ControlCheckBox.cs" />
-    <Compile Include="GL4\Controls\ControlButton.cs" />
-    <Compile Include="GL4\Controls\ControlGroupBox.cs" />
-    <Compile Include="GL4\Controls\ControlBaseText.cs" />
-    <Compile Include="GL4\Controls\ControlMultiLineTextBox.cs" />
-    <Compile Include="GL4\Controls\ControlUpDown.cs" />
-    <Compile Include="GL4\Controls\ControlLabel.cs" />
-    <Compile Include="GL4\Controls\ControlListBox.cs" />
-    <Compile Include="GL4\Controls\ControlForm.cs" />
-    <Compile Include="GL4\Controls\ControlScrollBar.cs" />
-    <Compile Include="GL4\Controls\ControlScrollPanelScrollBar.cs" />
-    <Compile Include="GL4\Controls\ControlScrollPanel.cs" />
-    <Compile Include="GL4\Controls\ControlFlowLayoutPanel.cs" />
-    <Compile Include="GL4\Controls\ControlDateTimePicker.cs" />
-    <Compile Include="GL4\Controls\ControlTab.cs" />
-    <Compile Include="GL4\Controls\ControlTableLayoutPanel.cs" />
-    <Compile Include="GL4\Controls\ControlTextBox.cs" />
-    <Compile Include="GL4\Controls\ControlPanel.cs" />
-    <Compile Include="GL4\Controls\ControlImage.cs" />
-    <Compile Include="GL4\Controls\ControlDisplay.cs" />
-    <Compile Include="GL4\Controls\Control.cs" />
-    <Compile Include="GL4\Controls\ControlTabStyleCustom.cs" />
+    <Compile Include="GL4\Controls\Forms\FormMessageBox.cs" />
+    <Compile Include="GL4\Controls\Forms\FormConfigurable.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlBaseButton.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlComboBox.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlCheckBox.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlButton.cs" />
+    <Compile Include="GL4\Controls\Panels\ControlGroupBox.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlBaseText.cs" />
+    <Compile Include="GL4\Controls\TextBoxes\ControlMultiLineTextBox.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlUpDown.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlLabel.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlListBox.cs" />
+    <Compile Include="GL4\Controls\Forms\ControlForm.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlScrollBar.cs" />
+    <Compile Include="GL4\Controls\Panels\ControlScrollPanelScrollBar.cs" />
+    <Compile Include="GL4\Controls\Panels\ControlScrollPanel.cs" />
+    <Compile Include="GL4\Controls\Panels\ControlFlowLayoutPanel.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlDateTimePicker.cs" />
+    <Compile Include="GL4\Controls\Tabs\ControlTab.cs" />
+    <Compile Include="GL4\Controls\Panels\ControlTableLayoutPanel.cs" />
+    <Compile Include="GL4\Controls\TextBoxes\ControlTextBox.cs" />
+    <Compile Include="GL4\Controls\Panels\ControlPanel.cs" />
+    <Compile Include="GL4\Controls\Controls\ControlImage.cs" />
+    <Compile Include="GL4\Controls\Base\ControlDisplay.cs" />
+    <Compile Include="GL4\Controls\Base\Control.cs" />
+    <Compile Include="GL4\Controls\Tabs\ControlTabStyleCustom.cs" />
     <Compile Include="GL4\Operations\OperationsConditional.cs" />
     <Compile Include="GL4\Operations\OperationsScissors.cs" />
     <Compile Include="GL4\Operations\OperationsSync.cs" />
