--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GL4\Controls\Animation\ControlAnimation.cs" />
     <Compile Include="GL4\Controls\Controls\ControlBaseCheckBox.cs" />
     <Compile Include="GL4\Controls\Controls\ControlCalendar.cs" />
+    <Compile Include="GL4\Controls\DGV\DataGridViewSorts.cs" />
     <Compile Include="GL4\Controls\DGV\DataGridViewCellControls.cs" />
     <Compile Include="GL4\Controls\Menus\ControlMenuItem.cs" />
     <Compile Include="GL4\Buffers\GLSetOfMatrixBufferWithGenerations.cs" />
