Rework matrixcalc again with new camera logic
Make matrixcalc work in +Z and -Z opengl mode
Demonstrate in testsimple
testrender is the bare minimum render
MTLB insert mode done
Right drag now translated, right+left vertical translate

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -228,6 +228,12 @@
     <Compile Include="Sync\TestSync.designer.cs">
       <DependentUpon>TestSync.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestRender.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestRender.designer.cs">
+      <DependentUpon>TestRender.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestSimple.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -436,6 +442,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Sync\TestSync.resx">
       <DependentUpon>TestSync.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestRender.resx">
+      <DependentUpon>TestRender.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TestSimple.resx">
       <DependentUpon>TestSimple.cs</DependentUpon>
