Added better default name for doc than index

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -14,6 +14,7 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <DefaultDocumentationAssemblyPageName>GLOFC-Class-List</DefaultDocumentationAssemblyPageName>
     <DefaultDocumentationGeneratedPages>Classes,Delegates,Interfaces</DefaultDocumentationGeneratedPages>
     <DefaultDocumentationFileNameMode>FullName</DefaultDocumentationFileNameMode>
     <DefaultDocumentationFolder>bin\mddoc</DefaultDocumentationFolder>
