Controller and display 3d hooking changed
Controls remoddled the events and display control reworked so not inheriting from GLWindowControl
Add TestControls project to split off the controls from the base code

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -634,5 +634,8 @@
   <ItemGroup>
     <None Include="Resources\Forward1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dotted1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
