Error reporting update - Introduce GLShaderLog
This records per context error state and if assert is required on compiler/linker warning
Compiles list of errors and a Okay flag to indicate everything succeeded
Component and program shaders have a compiled okay flag

--- a/OFC/OFC.csproj
+++ b/OFC/OFC.csproj
@@ -142,6 +142,7 @@
     <Compile Include="GL4\Operations\OperationsStencil.cs" />
     <Compile Include="GL4\Operations\OperationsBasic.cs" />
     <Compile Include="GL4\Operations\Operations.cs" />
+    <Compile Include="GL4\Shaders\Base\ShaderLog.cs" />
     <Compile Include="GL4\Shaders\Basic Shaders\ShadersTesselationSinewaveInstanced.cs" />
     <Compile Include="GL4\Shaders\Find\ShaderFindGeoTriangles.cs" />
     <Compile Include="GL4\Shaders\Fragment\ShadersFragmentBindless.cs" />
